data/logs/227d90307efef6a0652b6c46bc6d6b13da4bea8dcc5902b3dab6d65a75e00312.log
2023-06-28 13:05:58,731 CRIT Supervisor is running as root.  Privileges were not dropped because no user is specified in the config file.  If you intend to run as root, you can set user=root in the config file to avoid this message.
2023-06-28 13:05:58,734 INFO supervisord started with pid 7
2023-06-28 13:05:59,738 INFO spawned: 'nginx' with pid 10
2023-06-28 13:05:59,740 INFO spawned: 'app' with pid 11
Traceback (most recent call last):
  File "/app/main.py", line 6, in <module>
    import apps.svd.app
  File "/app/apps/svd/__init__.py", line 1, in <module>
    from .app import *
  File "/app/apps/svd/app.py", line 7, in <module>
    from apps.svd.Aggregator_FC_Federated_MFA import AggregatorFCFederatedMFA
  File "/app/apps/svd/Aggregator_FC_Federated_MFA.py", line 55
    self.outs = [])
                  ^
SyntaxError: unmatched ')'
2023-06-28 13:06:00,656 INFO exited: app (exit status 1; not expected)
2023-06-28 13:06:01,657 INFO success: nginx entered RUNNING state, process has stayed up for > than 1 seconds (startsecs)
2023-06-28 13:06:01,659 INFO spawned: 'app' with pid 47
Traceback (most recent call last):
  File "/app/main.py", line 6, in <module>
    import apps.svd.app
  File "/app/apps/svd/__init__.py", line 1, in <module>
    from .app import *
  File "/app/apps/svd/app.py", line 7, in <module>
    from apps.svd.Aggregator_FC_Federated_MFA import AggregatorFCFederatedMFA
  File "/app/apps/svd/Aggregator_FC_Federated_MFA.py", line 55
    self.outs = [])
                  ^
SyntaxError: unmatched ')'
2023-06-28 13:06:02,420 INFO exited: app (exit status 1; not expected)
2023-06-28 13:06:04,424 INFO spawned: 'app' with pid 71
Traceback (most recent call last):
  File "/app/main.py", line 6, in <module>
    import apps.svd.app
  File "/app/apps/svd/__init__.py", line 1, in <module>
    from .app import *
  File "/app/apps/svd/app.py", line 7, in <module>
    from apps.svd.Aggregator_FC_Federated_MFA import AggregatorFCFederatedMFA
  File "/app/apps/svd/Aggregator_FC_Federated_MFA.py", line 55
    self.outs = [])
                  ^
SyntaxError: unmatched ')'
2023-06-28 13:06:05,222 INFO exited: app (exit status 1; not expected)
2023-06-28 13:06:08,226 INFO spawned: 'app' with pid 95
Traceback (most recent call last):
  File "/app/main.py", line 6, in <module>
    import apps.svd.app
  File "/app/apps/svd/__init__.py", line 1, in <module>
    from .app import *
  File "/app/apps/svd/app.py", line 7, in <module>
    from apps.svd.Aggregator_FC_Federated_MFA import AggregatorFCFederatedMFA
  File "/app/apps/svd/Aggregator_FC_Federated_MFA.py", line 55
    self.outs = [])
                  ^
SyntaxError: unmatched ')'
2023-06-28 13:06:08,982 INFO exited: app (exit status 1; not expected)
2023-06-28 13:06:09,984 INFO gave up: app entered FATAL state, too many start retries too quickly
